# ProbOS

./: .env.example  .gitignore  404.html  CONTRIBUTING.md  DECISIONS.md  LICENSE  PROGRESS.md  README.md  cross_layer_analysis.py  dashboard.html  decisions-era-1-genesis.md  decisions-era-2-emergence.md  decisions-era-3-product.md  decisions-era-4-evolution.md  demo.py  designed-vs-built-review-2026-03-27.md  index.html  mkdocs.yml  progress-era-1-genesis.md  progress-era-2-emergence.md  progress-era-3-product.md  progress-era-4-evolution.md  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md
Vibes/: Nooplex_Final.md  Probos_Simple_Understanding  phase-3b-attention-prompt.md  probabilistic-os.jsx  probos-claude-code-prompt.md
config/: node-1.yaml  node-2.yaml  system.yaml  work_templates.yaml
docs/: CNAME  index.md
prompts/: BUILDER-EXECUTION-PLAN.md  activity-drawer.md  ad-325-unified-bridge.md  ad-330-build-blueprint.md  ad-332-parallel-chunk-execution.md  ad-333-chunk-assembler.md  ad-334-interface-validator.md  ad-335-hxi-transporter-viz.md  ad-336-end-to-end-integration.md  ad-388-glass-overlay.md  ad-389-dag-visualization.md  ad-390-ambient-intelligence.md  ad-392-adaptive-bridge.md  ad-396-quality-hardening.md  ad-398-crew-identity-alignment.md  ad-399-cross-layer-dependency-cleanup.md  ad-402-agent-behavioral-eval.md  ad-404-fix-windows-test-failures.md  ad-405-dag-checkpointing.md  ad-406-agent-profile-panel.md  ad-407b-ward-room-agents.md  ad-407c-ward-room-hxi.md  ad-407d-ward-room-agent-to-agent.md  ad-413-fine-grained-reset.md  (+359 more)
(+1408 files in other folders)
